wifi connection via host configuration

--- a/src/main/resources/filius/messages/MessagesBundle_de_DE.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_de_DE.properties
@@ -361,7 +361,10 @@ jhostkonfiguration_msg9 = MAC-Adresse
 jhostkonfiguration_msg10 = IP-Adresse als Name verwenden
 jhostkonfiguration_msg11 = IP-Weiterleitung aktivieren
 jhostkonfiguration_msg12 = MAC-Adresse als Name verwenden
-jhostkonfiguration_msg13 = Verwende drahtlose Netzwerkkarte / WLAN
+jhostkonfiguration_msg13 = Drahtlos (WLAN)
+jhostkonfiguration_msg14 = Kabelgebunden (LAN)
+jhostkonfiguration_msg15 = Drahtloses Netzwerk (SSID):
+jhostkonfiguration_msg16 = Bitte auswählen
 
 jmodemkonfiguration_msg1 = Name
 jmodemkonfiguration_msg2 = Auf eingehende Verbindungsanfrage warten
@@ -375,6 +378,7 @@ jmodemkonfiguration_msg8 = Trennen/Deaktivieren
 jswitchkonfiguration_msg1 = Name
 jswitchkonfiguration_msg2 = Neuer Switch
 jswitchkonfiguration_msg3 = als Wolke darstellen
+jswitchkonfiguration_msg4 = Name WLAN (SSID)
 
 jvermittlungsrechnerkonfiguration_msg1 = Konfiguration der Firewall
 jvermittlungsrechnerkonfiguration_msg2 = Name
