--- a/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
@@ -360,7 +360,10 @@ jhostkonfiguration_msg9 = MAC Address
 jhostkonfiguration_msg10 = Use IP address as name
 jhostkonfiguration_msg11 = Activate IP forwarding
 jhostkonfiguration_msg12 = Use MAC address as name
-jhostkonfiguration_msg13 = Use wireless connector / WiFi
+jhostkonfiguration_msg13 = Wireless (Wi-Fi)
+jhostkonfiguration_msg14 = Cable (LAN)
+jhostkonfiguration_msg15 = Wireless Network (SSID):
+jhostkonfiguration_msg16 = Please select
 
 jmodemkonfiguration_msg1 = Name
 jmodemkonfiguration_msg2 = Wait for incoming connection request
@@ -374,6 +377,7 @@ jmodemkonfiguration_msg8 = Disconnect/De-activate
 jswitchkonfiguration_msg1 = Name
 jswitchkonfiguration_msg2 = New Switch
 jswitchkonfiguration_msg3 = Display as Cloud
+jswitchkonfiguration_msg4 = Wi-Fi Name (SSID)
 
 jvermittlungsrechnerkonfiguration_msg1 = Firewall setup
 jvermittlungsrechnerkonfiguration_msg2 = Name
@@ -533,7 +537,7 @@ hw_notebook_msg2 = New Notebook
 hw_rechner_msg1 = Computer
 hw_rechner_msg2 = New Computer
 
-hw_switch_msg1 = Switch / WiFi
+hw_switch_msg1 = Switch / Wi-Fi
 
 hw_vermittlungsrechner_msg1 = Router
 hw_gateway_msg1 = Home Router
