--- a/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
@@ -367,7 +367,10 @@ jhostkonfiguration_msg9 = Adresse MAC
 jhostkonfiguration_msg10 = Utiliser l\u2019adresse IP comme nom
 jhostkonfiguration_msg11 = Activer routage des paquets
 jhostkonfiguration_msg12 = Utiliser l\u2019adresse MAC comme nom
-jhostkonfiguration_msg13 = Utiliser le réseau sans fil / WiFi
+jhostkonfiguration_msg13 = Sans fil (Wi-Fi)
+jhostkonfiguration_msg14 = Filaire (LAN)
+jhostkonfiguration_msg15 = Réseau sans fil (SSID):
+jhostkonfiguration_msg16 = Sélectionner
 
 jmodemkonfiguration_msg1 = Nom
 jmodemkonfiguration_msg2 = Attendre les connexions entrantes
@@ -381,6 +384,7 @@ jmodemkonfiguration_msg8 = D\u00e9connecter/D\u00e9sactiver
 jswitchkonfiguration_msg1 = Nom
 jswitchkonfiguration_msg2 = Nouveau switch
 jswitchkonfiguration_msg3 = Afficher comme un nuage
+jswitchkonfiguration_msg4 = Nom Wi-Fi (SSID)
 
 jvermittlungsrechnerkonfiguration_msg1 = Configuration du parefeu
 jvermittlungsrechnerkonfiguration_msg2 = Nom
@@ -542,7 +546,7 @@ hw_notebook_msg2 = Portable
 hw_rechner_msg1 = Ordinateur
 hw_rechner_msg2 = Ordinateur
 
-hw_switch_msg1 = Switch / WiFi
+hw_switch_msg1 = Switch / Wi-Fi
 
 hw_vermittlungsrechner_msg1 = Routeur
 hw_gateway_msg1 = Routeur Domestique
