Several new entries

--- a/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
@@ -378,6 +378,7 @@ jswitchkonfiguration_msg1 = Name
 jswitchkonfiguration_msg2 = New Switch
 jswitchkonfiguration_msg3 = Display as Cloud
 jswitchkonfiguration_msg4 = Wi-Fi Name (SSID)
+jswitchkonfiguration_msg5 = Retention Time
 
 jvermittlungsrechnerkonfiguration_msg1 = Firewall setup
 jvermittlungsrechnerkonfiguration_msg2 = Name
@@ -498,6 +499,8 @@ guievents_msg23 = LAN port already occupied!
 guievents_msg24 = WAN port
 guievents_msg25 = LAN port
 guievents_msg26 = Wireless connection not possible
+guievents_msg27 = Last Update
+guievents_msg28 = Clear Table
 
 guihilfe_msg1 = Help
 guihilfe_msg2 = <html><head></head><body><h1>Error</h1>Helpfiles not found.</body></html>
