Several new entries

--- a/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
@@ -385,6 +385,7 @@ jswitchkonfiguration_msg1 = Nom
 jswitchkonfiguration_msg2 = Nouveau switch
 jswitchkonfiguration_msg3 = Afficher comme un nuage
 jswitchkonfiguration_msg4 = Nom Wi-Fi (SSID)
+jswitchkonfiguration_msg5 = Temps de rétention
 
 jvermittlungsrechnerkonfiguration_msg1 = Configuration du parefeu
 jvermittlungsrechnerkonfiguration_msg2 = Nom
@@ -506,6 +507,8 @@ guievents_msg23 = Port LAN occupé!
 guievents_msg24 = Port WAN
 guievents_msg25 = Port LAN
 guievents_msg26 = Connexion sans fil impossible
+guievents_msg27 = Dernière mise à jour
+guievents_msg28 = Vider la table
 
 guihilfe_msg1 = Aide
 guihilfe_msg2 = <html><head></head><body><h1>Erreur</h1>Fichiers d&#8217;aide introuvables.</body></html>
