minor fixes switch with sat

--- a/src/main/resources/filius/messages/MessagesBundle_de_DE.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_de_DE.properties
@@ -379,7 +379,7 @@ jswitchkonfiguration_msg1 = Name
 jswitchkonfiguration_msg2 = Neuer Switch
 jswitchkonfiguration_msg3 = als Wolke darstellen
 jswitchkonfiguration_msg4 = Name WLAN (SSID)
-jswitchkonfiguration_msg5 = Gültigkeitsdauer
+jswitchkonfiguration_msg5 = Gültigkeitsdauer SAT-Einträge (in Sek.)
 
 jvermittlungsrechnerkonfiguration_msg1 = Konfiguration der Firewall
 jvermittlungsrechnerkonfiguration_msg2 = Name
@@ -500,7 +500,7 @@ guievents_msg23 = LAN-Anschluss bereits belegt!
 guievents_msg24 = WAN-Anschluss
 guievents_msg25 = LAN-Anschluss
 guievents_msg26 = Drahtlose Verbindung nicht möglich
-guievents_msg27 = Letztes Update
+guievents_msg27 = Letzte Aktualisierung
 guievents_msg28 = Tabelle l\u00f6schen
 
 guihilfe_msg1 = Hilfe
