--- a/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
@@ -385,7 +385,7 @@ jswitchkonfiguration_msg1 = Nom
 jswitchkonfiguration_msg2 = Nouveau switch
 jswitchkonfiguration_msg3 = Afficher comme un nuage
 jswitchkonfiguration_msg4 = Nom Wi-Fi (SSID)
-jswitchkonfiguration_msg5 = Temps de rétention
+jswitchkonfiguration_msg5 = Temps de rétention SAT (en seconds)
 
 jvermittlungsrechnerkonfiguration_msg1 = Configuration du parefeu
 jvermittlungsrechnerkonfiguration_msg2 = Nom
