--- a/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
@@ -378,7 +378,7 @@ jswitchkonfiguration_msg1 = Name
 jswitchkonfiguration_msg2 = New Switch
 jswitchkonfiguration_msg3 = Display as Cloud
 jswitchkonfiguration_msg4 = Wi-Fi Name (SSID)
-jswitchkonfiguration_msg5 = Retention Time
+jswitchkonfiguration_msg5 = Retention Time SAT Entries (Seconds)
 
 jvermittlungsrechnerkonfiguration_msg1 = Firewall setup
 jvermittlungsrechnerkonfiguration_msg2 = Name
