replace JFileChooser with FileDialog and remove svg export
- more native look and feel
- might fix MacOS issue with not visible files
(https://github.com/tofi86/universalJavaApplicationStub/issues/85)
- removal of faulty export as svg

--- a/src/main/resources/filius/messages/MessagesBundle_de_DE.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_de_DE.properties
@@ -1,5 +1,7 @@
 main_msg1 = M\u00f6chten Sie fortfahren? \u00c4nderungen gehen dann verloren!
 main_msg2 = \u00c4nderungen verwerfen?
+main_msg3 = Datei laden
+main_msg4 = Datei speichern
 
 main_dlg_OK = OK
 main_dlg_YES = Ja
