--- a/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
@@ -1,5 +1,7 @@
 main_msg1 = Do you want to continue? Changes will be discarded!
 main_msg2 = Discard changes?
+main_msg3 = Open file
+main_msg4 = Save file
 
 main_dlg_OK = OK
 main_dlg_YES = Yes
