--- a/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
@@ -1,6 +1,8 @@
 main_msg1 = Les derni\u00e8res modifications n\u2019ont pas \u00e9t\u00e9 sauvegard\u00e9es.\n\
             Voulez-vous vraiment fermer l\u2019application\u00a0?
 main_msg2 = Fermeture de FILIUS
+main_msg3 = Ouvrir fichier
+main_msg4 = Enregistrer le fichier
 
 main_dlg_OK = OK
 main_dlg_YES = Oui
