Several new entries, which are needed for NAT

--- a/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
@@ -424,6 +424,21 @@ jgatewayconfiguration_msg10 = NIC
 jgatewayconfiguration_msg16 = No Connection
 jgatewayconfiguration_msg17 = General
 jgatewayconfiguration_msg18 = MAC Address
+jgatewayconfiguration_msg19 = Port Forwarding Table
+jgatewayconfiguration_msg21 = New entry
+jgatewayconfiguration_msg22 = Delete entry
+jgatewayconfiguration_msg23 = Retention Time
+jgatewayconfiguration_msg24 = Method of Translation
+jgatewayconfiguration_msg25 = full-cone NAT
+jgatewayconfiguration_msg26 = (address)-restricted-cone NAT
+
+jportforwarding_msg1 = Valid entries: TCP, UDP, 6 (for TCP) and 17 (for UDP)
+jportforwarding_msg2 = Valid entries: Port numbers between 1 and 65535 
+jportforwarding_msg3 = Valid entries: IP-Addresses from the LAN scope
+jportforwarding_msg4 = Protocol
+jportforwarding_msg5 = local WAN Port
+jportforwarding_msg6 = LAN Address
+jportforwarding_msg7 = LAN Port
 
 jweiterleitungstabelle_msg1 = Clear
 jweiterleitungstabelle_msg2 = New line
@@ -503,6 +518,14 @@ guievents_msg25 = LAN port
 guievents_msg26 = Wireless connection not possible
 guievents_msg27 = Last Update
 guievents_msg28 = Clear Table
+guievents_msg29 = NAT Table
+guievents_msg30 = Protocol
+guievents_msg31 = WAN Address
+guievents_msg32 = local WAN Port
+guievents_msg33 = LAN Address
+guievents_msg34 = LAN Port
+guievents_msg35 = Method of Translation
+guievents_msg36 = Reset table
 
 guihilfe_msg1 = Help
 guihilfe_msg2 = <html><head></head><body><h1>Error</h1>Helpfiles not found.</body></html>
