--- a/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
@@ -1,5 +1,7 @@
 main_msg1 = Do you want to continue? Changes will be discarded!
 main_msg2 = Discard changes?
+main_msg3 = Open file
+main_msg4 = Save file
 
 main_dlg_OK = OK
 main_dlg_YES = Yes
@@ -378,7 +380,7 @@ jswitchkonfiguration_msg1 = Name
 jswitchkonfiguration_msg2 = New Switch
 jswitchkonfiguration_msg3 = Display as Cloud
 jswitchkonfiguration_msg4 = Wi-Fi Name (SSID)
-jswitchkonfiguration_msg5 = Retention Time
+jswitchkonfiguration_msg5 = Retention Time SAT Entries (Seconds)
 
 jvermittlungsrechnerkonfiguration_msg1 = Firewall setup
 jvermittlungsrechnerkonfiguration_msg2 = Name
