Revert "Several new entries, which are needed for NAT. Translated with Google"
This reverts commit 558e9c88c6786e6824009a155dcfa2f8dc27cc04.

--- a/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
@@ -259,7 +259,7 @@ webserver_msg5 = Sous-dossier
 webserver_msg6 = Activer les h\u00f4tes virtuels
 
 desktoppanel_msg1 = Installation des logiciels
-desktoppanel_application=u\00c9cran d'accueil
+desktoppanel_application=Écran d'accueil
 
 installationsdialog_msg1 = Installation des logiciels
 installationsdialog_msg2 = Appliquer les modifications
@@ -371,8 +371,8 @@ jhostkonfiguration_msg11 = Activer routage des paquets
 jhostkonfiguration_msg12 = Utiliser l\u2019adresse MAC comme nom
 jhostkonfiguration_msg13 = Sans fil (Wi-Fi)
 jhostkonfiguration_msg14 = Filaire (LAN)
-jhostkonfiguration_msg15 = R\u00e9seau sans fil (SSID):
-jhostkonfiguration_msg16 = S\u00e9lectionner
+jhostkonfiguration_msg15 = Réseau sans fil (SSID):
+jhostkonfiguration_msg16 = Sélectionner
 
 jmodemkonfiguration_msg1 = Nom
 jmodemkonfiguration_msg2 = Attendre les connexions entrantes
@@ -387,11 +387,7 @@ jswitchkonfiguration_msg1 = Nom
 jswitchkonfiguration_msg2 = Nouveau switch
 jswitchkonfiguration_msg3 = Afficher comme un nuage
 jswitchkonfiguration_msg4 = Nom Wi-Fi (SSID)
-<<<<<<< Upstream, based on origin/master
 jswitchkonfiguration_msg5 = Temps de rétention SAT (en seconds)
-=======
-jswitchkonfiguration_msg5 = Temps de r\u00e9tention
->>>>>>> c98ef55 Several new entries, which are needed for NAT. Translated with Google
 
 jvermittlungsrechnerkonfiguration_msg1 = Configuration du parefeu
 jvermittlungsrechnerkonfiguration_msg2 = Nom
@@ -435,21 +431,6 @@ jgatewayconfiguration_msg10 = Carte r\u00e9seau
 jgatewayconfiguration_msg16 = Aucune connexion
 jgatewayconfiguration_msg17 = G\u00e9n\u00e9ral
 jgatewayconfiguration_msg18 = Adresse Mac
-jgatewayconfiguration_msg19 = Table de réacheminement de port
-jgatewayconfiguration_msg21 = nouvelle entr\u00e9e
-jgatewayconfiguration_msg22 = Supprimer l\u2019entr\u00e9e
-jgatewayconfiguration_msg23 = Temps de r\u00e9tention
-jgatewayconfiguration_msg24 = M\u00e9thode de translation
-jgatewayconfiguration_msg25 = full-cone NAT
-jgatewayconfiguration_msg26 = (address)-restricted-cone NAT
-
-jportforwarding_msg1 = Entr\u00e9es valides: TCP, UDP, 6 (pour TCP) et 17 (pour UDP)
-jportforwarding_msg2 = Entr\u00e9es valides: num\u00e9ros de port entre 1 et 65535 
-jportforwarding_msg3 = Entr\u00e9es valides: Adresses IP de la port\u00e9e LAN
-jportforwarding_msg4 = Protocole
-jportforwarding_msg5 = Port WAN
-jportforwarding_msg6 = Adresse LAN
-jportforwarding_msg7 = Port LAN
 
 jweiterleitungstabelle_msg1 = Supprimer la ligne s\u00e9lectionn\u00e9e
 jweiterleitungstabelle_msg2 = Nouvelle ligne
@@ -513,7 +494,7 @@ guievents_msg8 = Table SAT
 guievents_msg9 = MAC
 guievents_msg10 = Port
 guievents_msg11 = Configurer
-guievents_msg12 = Une connexion avec ce composant existe d\u00e9ju\00e0.
+guievents_msg12 = Une connexion avec ce composant existe déjà.
 guievents_msg13 = Couleur
 guievents_msg14 = Style de police
 guievents_msg15 = Taille de police
@@ -523,21 +504,13 @@ guievents_msg18 = Plus grande
 guievents_msg19 = Normal
 guievents_msg20 = Italique
 guievents_msg21 = Gras
-guievents_msg22 = Port WAN occup\u00e9!
-guievents_msg23 = Port LAN occup\u00e9!
+guievents_msg22 = Port WAN occupé!
+guievents_msg23 = Port LAN occupé!
 guievents_msg24 = Port WAN
 guievents_msg25 = Port LAN
 guievents_msg26 = Connexion sans fil impossible
-guievents_msg27 = Derni\u00e8re mise u\00e0 jour
+guievents_msg27 = Dernière mise à jour
 guievents_msg28 = Vider la table
-guievents_msg29 = Table NAT
-guievents_msg30 = Protocole
-guievents_msg31 = Adress WAN
-guievents_msg32 = Port WAN local
-guievents_msg33 = Adresse LAN
-guievents_msg34 = Port LAN
-guievents_msg35 = M\u00e9thode de translation
-guievents_msg36 = R\u00e9initialiser la table
 
 guihilfe_msg1 = Aide
 guihilfe_msg2 = <html><head></head><body><h1>Erreur</h1>Fichiers d&#8217;aide introuvables.</body></html>
@@ -598,7 +571,7 @@ sw_serveranwendung_msg2 = R\u00e9ception des requ\u00eates d\u00e9marr\u00e9e
 sw_serveranwendung_msg3 = Socket du serveur ferm\u00e9e
 sw_serveranwendung_msg4 = Connexion au socket
 sw_serveranwendung_msg5 =
-sw_serveranwendung_msg6 = Le socket du serveur n'a pas pu \u00eatre initialis\u00e9.
+sw_serveranwendung_msg6 = Le socket du serveur n'a pas pu être initialisé.
 
 sw_servermitarbeiter_msg1 = D\u00e9connexion du socket
 sw_servermitarbeiter_msg2 =
@@ -691,7 +664,7 @@ sw_terminal_msg25 = Liste des commandes disponibles:\n \
                     arp           affiche la table (ARP) de r\u00e9solution d\u2019adresses\n \
                     arpsend       envoyer une r\u00e9ponse de l'ARP\n \
 					cd            change le dossier courant\n \
-					cls           r\u00e9initialiser l'affichage\n \
+					cls           réinitialiser l'affichage\n \
 					copy / cp     copie un fichier\n \
                     cat / type    affiche le contenu d\u2019un fichier \n \
 					del / rm      supprime une fichier ou un dossier\n \
@@ -805,7 +778,7 @@ sw_terminal_msg57 = \n\n \
 \ \ \ \ \ \ \ \ \ \ \ \ \ SP      SP           SP                          \n \
 \ \ \ \ \ \ \ \ \ \ \ \ \ Y       Y            Y                           \n\n
 
-sw_terminal_msg58 = le courrier est trait\u00e9 par
+sw_terminal_msg58 = le courrier est traité par
 
 sw_terminal_trace_msg2 = Erreur: impossible de se connecter au serveur DNS.
 sw_terminal_trace_msg3 = Erreur: le nom de domaine n\u2019a pas pu \u00eatre r\u00e9solu.
@@ -865,7 +838,7 @@ rp_lauscher_msg3 = Source
 rp_lauscher_msg4 = Destination
 rp_lauscher_msg5 = Protocole
 rp_lauscher_msg6 = Couche
-rp_lauscher_msg7 = Commentaire / D\u00e9tail
+rp_lauscher_msg7 = Commentaire / Détail
 rp_lauscher_msg8 = R\u00e9seau
 rp_lauscher_msg9 = Internet
 rp_lauscher_msg10 = Transport
@@ -890,7 +863,7 @@ jsidebar_tooltip_ipAddress = Adresse IP/masque (Adresse MAC)
 jsidebar_tooltip_gateway = Passerelle
 jsidebar_tooltip_dnsServer = Serveur DNS
 
-report_overview = Expos\u00e9 sommaire
+report_overview = Exposé sommaire
 report_component_config = Composants
 report_base_config = Configuration de base
 report_nics = Interfaces r\u00e9seau
