--- a/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
@@ -537,10 +537,10 @@ infodialog_msg10 = Distribution under the terms and conditions of GNU General Pu
 infodialog_msg11 = Contributors:
 
 hw_notebook_msg1 = Notebook
-hw_notebook_msg2 = New Notebook
+hw_notebook_msg2 = Notebook
 
 hw_rechner_msg1 = Computer
-hw_rechner_msg2 = New Computer
+hw_rechner_msg2 = Computer
 
 hw_switch_msg1 = Switch / Wi-Fi
 
